actions: fix(magiskboot) fix dtb find
sekaimoe@localhost ~/c/hoot (master)> magiskboot unpack boot.img
Parsing boot image: [boot.img]
HEADER_VER      [2]
KERNEL_SZ       [54837264]
RAMDISK_SZ      [1330716]
SECOND_SZ       [0]
RECOV_DTBO_SZ   [0]
DTB_SZ          [1613904]
OS_VERSION      [13.0.0]
OS_PATCH_LEVEL  [2023-04]
PAGESIZE        [4096]
NAME            []
CMDLINE         [console=ttyMSM0,115200n8 androidboot.hardware=qcom androidboot.console=ttyMSM0 androidboot.memcg=1 lpm_levels.sleep_disabled=1 video=vfb:640x400,bpp=32,memsize=3072000 msm_rtb.filter=0x237 service_locator.enable=1 androidboot.usbcontroller=a600000.dwc3 swiotlb=2048 loop.max_part=7 cgroup.memory=nokmem,nosocket reboot=panic_warm buildvariant=user]
CHECKSUM        [ea634987b82eca6a7b5cf93a448726fbcb77ab61000000000000000000000000]
KERNEL_FMT      [raw]
RAMDISK_FMT     [gzip]
VBMETA
sekaimoe@localhost ~/c/hoot (master)> ls
boot.img  dtb  kernel  ramdisk.cpio

--- a/action.yml
+++ b/action.yml
@@ -427,7 +427,7 @@ runs:
             if [ "$FMT" = "raw" ] ; then
                 cp -v ../out/arch/${{ inputs.arch }}/boot/Image kernel
             else
-                if find -name "*dtb" ; then
+                if ls dtb >/dev/null ; then
                     cp -v ../out/arch/${{ inputs.arch }}/boot/Image.*-dtb kernel
                 else
                     cp -v ../out/arch/${{ inputs.arch }}/boot/Image.* kernel
