actions: fix(build): fix build ci setup failure
Signed-off-by: dabao1955 <dabao1955@163.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
       fail-fast: false
     runs-on: ubuntu-latest
     permissions:
-      contents: write
+      contents: read
 
     steps:
     - name: Test CI
