--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,10 +15,10 @@ jobs:
     - name: Build Kernel
       uses: dabao1955/kernel_build_action@main
       with:
-          kernel-url: https://github.com/AcmeUI-Devices/android_kernel_xiaomi_cas
-          kernel-dir: msm-4.19
-          branch: taffy
-          config: cas_defconfig
+          kernel-url: https://github.com/mello-kernel/kernel_realme_sm7125
+          kernel-dir: msm-4.14
+          branch: roms
+          config: atoll_defconfig
           arch: arm64
           aosp-gcc: true
           aosp-clang: true
