--- a/action.yml
+++ b/action.yml
@@ -6,13 +6,13 @@ branding:
   color: 'blue'
 
 inputs:
-  kernel-url:
+  kernel-url: https://github.com/mello-kernel/kernel_realme_sm7125
     description: 'Kernel Source Url'
     required: true
   depth:
     required: false
     default: 1
-  vendor-url:
+  vendor-url: https://github.com/realme-sm7125/platform_device_realme_sm7125-common
     description: 'Kernel Vendor Source Url'
     required: false
   kernel-dir:
@@ -38,11 +38,11 @@ inputs:
   android-version:
     description: 'Android version.'
     required: true
-    default: 12
+    default: 14
   apatch:
     description: 'APatch function support'
-    required: false
-    default: false
+    required: true
+    default: "main"
   ksu:
     description: 'KernelSU function support'
     required: false
