actions: fix(Anykernel3): add anykernel3-url

--- a/action.yml
+++ b/action.yml
@@ -421,7 +421,11 @@ runs:
             echo "::endgroup::"
          else
             echo "::group:: Packaging Anykernel3 flasher"
-            git clone https://github.com/osm0sis/AnyKernel3
+            if [ -z ${{ inputs.anykernel3-url }} ];then
+                git clone https://github.com/osm0sis/AnyKernel3
+            else
+                git clone ${{ inputs.anykernel3-url }} Anykernel3
+            fi
             sed -i 's!block=/dev/block/platform/omap/omap_hsmmc.0/by-name/boot;!block=auto;!g' AnyKernel3/anykernel.sh
             sed -i 's/do.devicecheck=1/do.devicecheck=0/g' AnyKernel3/anykernel.sh
             sed -i 's/is_slot_device=0;/is_slot_device=auto;/g' AnyKernel3/anykernel.sh
