[skip ci]README: fix: fix typo
Signed-off-by: dabao1955 <dabao1955@163.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Kernel(4.19)
+name: Build Kernel
 on:
   workflow_dispatch:
   workflow_call:
@@ -12,7 +12,7 @@ jobs:
       contents: read
 
     steps:
-    - name: Build Kernel With Testing Action
+    - name: Build Kernel
       uses: dabao1955/kernel_build_action@main
       with:
           kernel-url: https://github.com/AcmeUI-Devices/android_kernel_xiaomi_cas
