--- a/action.yml
+++ b/action.yml
@@ -142,7 +142,7 @@ runs:
 
     - name: Setup ccache
       if: inputs.ccache == 'true'
-      uses: hendrikmuhs/ccache-action@v1.2 
+      uses: hendrikmuhs/ccache-action@v1.2
       with:
         key: build-kernel-${{ inputs.arch }}${{ inputs.config }}
         max-size: 4G
@@ -150,12 +150,10 @@ runs:
     - name: Build Kernel
       shell: bash
       run: |
-         if [[ ${GITHUB_ACTIONS} != "true" || ${OSTYPE} != "linux-gnu" || ! -f /bin/apt ]]; then
-             printf "This Action Is Intended For Ubuntu Runner.\n"
+         if [[ ${GITHUB_ACTIONS} != "true" || ${OSTYPE} != "linux-gnu" || ! -f /bin/apt || "$(id -u)" -eq 0 ]]; then
+             printf "This Action Is Intended For non-root Ubuntu Runner.\n"
              exit 127
          fi
-
-         [ "$(id -u)" -eq 0 ] && echo "Do not be run as root" && exit 128
 
          if [ ${GITHUB_ACTIONS} = "true" ]; then
              echo "::group:: Cleaning up"
@@ -169,15 +167,18 @@ runs:
          sudo apt-get install --no-install-recommends -y binutils binutils-aarch64-linux-gnu binutils-arm-linux-gnueabi git ccache automake flex lzop bison gperf build-essential zip curl zlib1g-dev g++-multilib libxml2-utils bzip2 libbz2-dev libbz2-1.0 libghc-bzlib-dev squashfs-tools pngcrush schedtool dpkg-dev liblz4-tool make optipng maven libssl-dev pwgen libswitch-perl policycoreutils minicom libxml-sax-base-perl libxml-simple-perl bc libc6-dev-i386 lib32ncurses5-dev libx11-dev lib32z-dev libgl1-mesa-dev xsltproc unzip device-tree-compiler python3 aria2
          echo "::endgroup::"
 
-         echo "::group:: Setting Up Swap"
-         export SWAP_FILE=$(swapon --show=NAME | tail -n 1)
-         sudo swapoff $SWAP_FILE
-         sudo rm $SWAP_FILE
-         sudo fallocate -l 16G $SWAP_FILE
-         sudo chmod 600 $SWAP_FILE
-         sudo mkswap $SWAP_FILE
-         sudo swapon $SWAP_FILE
-         echo "::endgroup::"
+         if [ -f /bin/swapon ]; then
+             echo "::group:: Setting Up Swap"
+             export SWAP_FILE=$(swapon --show=NAME | tail -n 1)
+             sudo swapoff $SWAP_FILE
+             sudo rm $SWAP_FILE
+             sudo fallocate -l 16G $SWAP_FILE
+             sudo chmod 600 $SWAP_FILE
+             sudo mkswap $SWAP_FILE
+             sudo swapon $SWAP_FILE
+             unset SWAP_FILE
+             echo "::endgroup::"
+         fi
 
          if [ ${{ inputs.aosp-gcc }} = true ]; then
              echo "::group:: Downloading AOSP GCC"
