--- a/action.yml
+++ b/action.yml
@@ -326,8 +326,8 @@ runs:
              mkdir drivers/apatch
              aria2c https://github.com/dabao1955/kernel_build_action/raw/main/apatch/Kconfig
              grep -q "apatch" || sed -i "/endmenu/i\\source \"drivers/apatch/Kconfig\"" drivers/Kconfig
-             aria2c https://github.com/dabao1955/kernel_build_action/raw/main/apatch/fix_module.patch
-             git apply fix_module.patch
+             aria2c https://github.com/dabao1955/kernel_build_action/raw/main/apatch/module_fix.patch
+             git apply module_fix.patch
              echo "CONFIG_APATCH_SUPPORT=y" | tee -a arch/${{ inputs.arch }}/configs/${{ inputs.config }} >/dev/null
              echo "CONFIG_APATCH_FIX_MODULES=y" | tee -a arch/${{ inputs.arch }}/configs/${{ inputs.config }} >/dev/null
              echo "CONFIG_APATCH_CUSTOMS=y" | tee -a arch/${{ inputs.arch }}/configs/${{ inputs.config }} >/dev/null
