actions: fix(APatch): fix Kconfig path
Signed-off-by: dabao1955 <dabao1955@163.com>

--- a/action.yml
+++ b/action.yml
@@ -324,7 +324,7 @@ runs:
          if [ ${{ inputs.apatch }} = true ]; then
              echo "::group:: Initializing Apatch"
              mkdir drivers/apatch
-             aria2c https://github.com/dabao1955/kernel_build_action/raw/main/apatch/Kconfig
+             aria2c https://github.com/dabao1955/kernel_build_action/raw/main/apatch/Kconfig -o drivers/apatch/Kconfig
              grep -q "apatch" || sed -i "/endmenu/i\\source \"drivers/apatch/Kconfig\"" drivers/Kconfig
              aria2c https://github.com/dabao1955/kernel_build_action/raw/main/apatch/module_fix.patch
              git apply module_fix.patch
