--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,9 +22,11 @@ jobs:
           arch: arm64
           aosp-gcc: true
           aosp-clang: true
-          apatch: true
-          android-version: 12
-          aosp-clang-version: r383902
+          apatch: false
+          ksu: true
+          ksu-version: main
+          android-version: 14
+          aosp-clang-version: r487747
           python-27: true
           disable-lto: true
           anykernel3: true
