--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,10 +20,12 @@ jobs:
           branch: roms
           config: atoll_defconfig
           arch: arm64
-          aosp-gcc: true
-          aosp-clang: true
-          apatch: false
-          ksu: true
+          aosp-gcc: false
+          aosp-clang: false
+          other-clang-url: https://github.com/kdrag0n/proton-clang
+          other-clang-branch: master
+          apatch: true
+          ksu: false
           ksu-version: main
           android-version: 12
           aosp-clang-version: r383902
