--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Kernel(4.19)
+name: Build Kernel(4.9)
 on:
   workflow_dispatch:
   workflow_call:
@@ -15,10 +15,10 @@ jobs:
     - name: Build Kernel With Testing Action
       uses: dabao1955/kernel_build_action@main
       with:
-          kernel-url: https://github.com/AcmeUI-Devices/android_kernel_xiaomi_cas
-          kernel-dir: msm-4.19
-          branch: taffy
-          config: cas_defconfig
+          kernel-url: https://github.com/ARIPIN897/kernel_oppo_OP4BFB.git
+          kernel-dir: OP4BFB-4.9
+          branch: android_9.0
+          config: OP4BFB_defconfig
           arch: arm64
           aosp-gcc: true
           aosp-clang: true
