actions: feat(pull code): add `vendor-branch` option
fix #20

Signed-off-by: dabao1955 <dabao1955@163.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       with:
           kernel-url: https://github.com/AcmeUI-Devices/android_kernel_xiaomi_cas
           kernel-dir: msm-4.19
-          branch: taffy
+          kernel-branch: taffy
           config: cas_defconfig
           arch: arm64
           aosp-gcc: true
